<resources>
    <string name="app_name">Popular People</string>
    <string name="image_description">Actor Image</string>
    <string name="dummy_actor_name">Anya Taylor-Joy</string>
    <string name="details_activity_label">Details</string>
    <string name="popularity">Popularity</string>
    <string name="department">Department</string>
    <string name="gender">Gender</string>
    <string name="known_for">Known For: </string>
    <string name="image_activity_label">Current Image</string>
    <string name="save_image">Save Image</string>
    <string name="notification_title">Download Image</string>
    <string name="notification_description">Download Image from PopularPeople app</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="leftToRight_anim">left-to-right</string>
    <string name="rightToLeft_anim">right-to-left</string>
    <string name="fadeinToFdeout_anim">fadein-to-fadeout</string>
    <string name="bottomToUp_anim">bottom-to-up</string>
</resources>