<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.marwaeltayeb.popularpeople.view.DetailsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".view.DetailsActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/details_linearLayout_margin"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:id="@+id/actorImage"
                android:layout_width="@dimen/details_actorImage_width"
                android:layout_height="@dimen/details_actorImage_height"
                android:contentDescription="@string/image_description" />

            <TextView
                android:id="@+id/actorName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/details_actorName_marginStart"
                android:fontFamily="sans-serif-light"
                android:textColor="@color/black"
                android:textSize="@dimen/details_actorName_textSize"
                tools:text="@string/dummy_actor_name" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/details_linearLayout_margin"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="sans-serif-light"
                android:text="@string/popularity"
                android:textColor="@color/black"
                android:textSize="@dimen/details_textSize"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/actorPopularity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:textColor="@color/black"
                android:textSize="@dimen/details_textSize"
                tools:text="62.615" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/details_linearLayout_margin"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="sans-serif-light"
                android:text="@string/department"
                android:textColor="@color/black"
                android:textSize="@dimen/details_textSize"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/actorDepartment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:textColor="@color/black"
                android:textSize="@dimen/details_textSize"
                tools:text="Acting" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/details_linearLayout_margin"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="sans-serif-light"
                android:text="@string/gender"
                android:textColor="@color/black"
                android:textSize="@dimen/details_textSize"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/actorGender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:textColor="@color/black"
                android:textSize="@dimen/details_textSize"
                tools:text="Female" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/details_marginStart"
            android:fontFamily="sans-serif-light"
            android:text="@string/known_for"
            android:textColor="@color/black"
            android:textSize="@dimen/details_textSize"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/actorKnownFor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/details_marginStart"
            android:layout_marginTop="@dimen/details_marginTop"
            android:fontFamily="sans-serif-light"
            android:textColor="@color/black"
            android:textSize="@dimen/details_textSize"
            tools:text="Split" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rcActorImageList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/details_marginStart"
            android:layout_marginTop="@dimen/details_rc_marginTop"
            android:layout_marginEnd="@dimen/details_rc_marginEnd"
            android:layout_marginBottom="@dimen/details_rc_marginBottom"
            tools:listitem="@layout/image_list_item"/>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>